# markdown-it

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  codecov.yml  deps.yml  pages.yml  tests.yml
benches/: test-file.md  test-file.rs
benchmarks/: Cargo.toml  test-file.md  test-file.rs
demo/: .gitignore  Cargo.toml  package.json  webpack.config.js
demo/src/: index.pug  index.styl  lib.rs  sample.md
examples/custom-headings/: main.rs
examples/error_handling/: README.md  main.rs
examples/ferris/: README.md  block_rule.rs  core_rule.rs  inline_rule.rs  main.rs
examples/headings-with-ids/: README.md  main.rs
src/: bin.rs  env.rs  erasedset.rs  helpers.rs  lib.rs  markvec.rs  renderer.rs  ruler.rs  sourcemap.rs  symbol.rs  token.rs
src/block/: mod.rs  state.rs
src/block/rules/: blockquote.rs  code.rs  fence.rs  heading.rs  hr.rs  html_block.rs  lheading.rs  list.rs  paragraph.rs  reference.rs
src/common/: entities.rs  erasedset.rs  html_blocks.rs  html_re.rs  mod.rs  ruler.rs  sourcemap.rs  testreadme.rs  typekey.rs  utils.rs
src/common/mdurl/: asciiset.rs  encode.rs  mdurl.rs  mod.rs
src/core/: mod.rs  state.rs
src/core/rules/: block.rs  mod.rs  normalize.rs  text_join.rs
src/examples/: mod.rs
src/examples/ferris/: block_rule.rs  core_rule.rs  inline_rule.rs  mod.rs
src/generics/: mod.rs
src/generics/inline/: code_pair.rs  emph_pair.rs  full_link.rs  mod.rs
src/inline/: mod.rs  state.rs
src/inline/rules/: autolink.rs  backticks.rs  entity.rs  escape.rs  fragments_join.rs  image.rs  link.rs  strikethrough.rs
src/mdurl/: asciiset.rs  encode.rs  mod.rs
src/parser/: extset.rs  linkfmt.rs  main.rs  mod.rs  node.rs  renderer.rs
src/parser/block/: mod.rs  rule.rs  state.rs
src/parser/block/builtin/: block_parser.rs  mod.rs
src/parser/core/: mod.rs  root.rs  rule.rs
src/parser/inline/: mod.rs  rule.rs  state.rs
src/parser/inline/builtin/: fragments_join.rs  inline_parser.rs  mod.rs  skip_text.rs
src/parser/internals/: common.rs  env.rs  erasedset.rs  mod.rs  ruler.rs  sourcemap.rs
src/parser/internals/block/: mod.rs  state.rs
src/parser/internals/inline/: mod.rs  state.rs
src/parser/internals/mdurl/: asciiset.rs  encode.rs  mod.rs
src/parser/internals/syntax_base/builtin/: block_inlines.rs  block_parser.rs  inline_parser.rs  inline_text.rs  mod.rs  skip_text.rs
src/parser/internals/syntax_base/generics/inline/: code_pair.rs  emph_pair.rs  full_link.rs
src/plugins/: mod.rs  sourcepos.rs
src/plugins/cmark/: mod.rs
src/plugins/cmark/block/: blockquote.rs  code.rs  fence.rs  heading.rs  hr.rs  lheading.rs  list.rs  mod.rs  paragraph.rs  reference.rs
src/plugins/cmark/inline/: autolink.rs  backticks.rs  emphasis.rs  entity.rs  escape.rs  image.rs  link.rs  mod.rs  newline.rs
src/plugins/extra/: beautify_links.rs  heading_anchor.rs  heading_anchors.rs  linkify.rs  mod.rs  smartquotes.rs  strikethrough.rs  syntect.rs  tables.rs  typographer.rs
src/plugins/extra/inline/: linkify.rs  mod.rs  strikethrough.rs
src/plugins/html/: html_block.rs  html_inline.rs  mod.rs
src/plugins/html/utils/: blocks.rs  regexps.rs
src/renderer/: default.rs  mod.rs  sourcemap.rs
src/rulers/: markvec.rs  mod.rs  ruler.rs
src/syntax/: mod.rs  sourcepos.rs
src/syntax/base/: mod.rs
src/syntax/base/block/: inline.rs
src/syntax/base/core/: block.rs  inline.rs  mod.rs  normalize.rs  text_join.rs
src/syntax/base/inline/: balance_pairs.rs  fragments_join.rs  mod.rs  pairs.rs  text.rs
src/syntax/cmark/: mod.rs
src/syntax/cmark/block/: blockquote.rs  code.rs  fence.rs  heading.rs  hr.rs  html_block.rs  lheading.rs  list.rs  mod.rs  paragraph.rs  reference.rs
src/syntax/cmark/core/: block.rs  inline.rs  normalize.rs  text_join.rs
src/syntax/cmark/inline/: autolink.rs  backticks.rs  balance_pairs.rs  emphasis.rs  entity.rs  escape.rs  fragments_join.rs  html_inline.rs  image.rs  link.rs  mod.rs  newline.rs  strikethrough.rs  text.rs
src/syntax/extra/: mod.rs
src/syntax/extra/inline/: mod.rs  strikethrough.rs
src/syntax/html/: html_block.rs  html_inline.rs  mod.rs
src/syntax/html/utils/: mod.rs
src/syntax_base/: mod.rs
src/syntax_base/builtin/: block_inlines.rs  inline_text.rs  mod.rs
src/syntax_base/generics/inline/: code_pair.rs  emph_pair.rs  full_link.rs  mod.rs
tests/: commonmark.rs  extras.rs  linkify.rs  markdown-it-smartquotes.rs  markdown-it-typographer.rs  markdown-it.rs  pathological.rs  sourcemaps.rs
tests/fixtures/: README.md  package.json  testgen.js
tests/fixtures/markdown-it/: markdown-it-rs.txt  typographer-extra.txt
