[package]
name = "markdown-it"
version = "0.1.1"
authors = ["Alex Kocharin <alex@kocharin.ru>"]
description = "Rust port of popular markdown-it.js library."
documentation = "https://docs.rs/markdown-it"
homepage = "https://github.com/rlidwka/markdown-it.rs"
repository = "https://github.com/rlidwka/markdown-it.rs"
readme = "README.md"
keywords = ["markdown", "commonmark"]
license = "MIT"
categories = ["text-processing", "parsing"]
edition = "2021"

[lib]
name = "markdown_it"
path = "src/lib.rs"

[[bin]]
name = "markdown-it"
path = "src/bin.rs"
doc = false

[dependencies]
argparse = "0.2.2"
const_format = "0.2.23"
derivative = "2.2.0"
downcast-rs = "1.2.0"
entities = "1.0.1"
html-escape = "0.2.11"
once_cell = "1.12.0"
readonly = "0.2"
regex = "1.5"
stacker = "0.1.14"
unicode-general-category = "0.5.1"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "test-file"
harness = false
