[package]
name = "markdown-it"
version = "0.4.0"
authors = ["Alex Kocharin <alex@kocharin.ru>"]
description = "Rust port of popular markdown-it.js library."
documentation = "https://docs.rs/markdown-it"
homepage = "https://github.com/rlidwka/markdown-it.rs"
repository = "https://github.com/rlidwka/markdown-it.rs"
readme = "README.md"
keywords = ["markdown", "commonmark"]
license = "MIT"
categories = ["text-processing", "parsing"]
edition = "2021"

[lib]
name = "markdown_it"
path = "src/lib.rs"

[[bin]]
name = "markdown-it"
path = "src/bin.rs"
doc = false

[features]
default = ["linkify", "syntect"]

[dependencies]
# Lower range limit of these dependencies was manually checked to work with
# minimal versions possible, higher range limit is best guess based on semver.
# So older versions will not work, but newer versions might.
argparse     = ">= 0.2.1, < 0.3"
const_format = ">= 0.1.0, < 0.3"
derivative   = ">= 1.0.2, < 3"
downcast-rs  = ">= 1.0.2, < 2"
entities     = ">= 0.1.0, < 2"
html-escape  = ">= 0.1.0, < 0.3"
indoc        = "1.0.8"
linkify      = { version = ">= 0.5.0, < 0.10", optional = true }
mdurl        = ">= 0.3.1, < 0.4"
once_cell    = ">= 1.0.1, < 2"
readonly     = ">= 0.2.0, < 0.3"
regex        = ">= 1.0.0, < 2"
slug = "0.1.4"
stacker      = ">= 0.1.2, < 0.2"
syntect      = { version = ">= 5.0.0, < 6", optional = true, default-features = false, features = ["default-fancy"] }
unicode-general-category = ">= 0.1.0, < 0.7"
