[package]
name = "index"
version = "0.0.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
console_error_panic_hook = "0.1.7"
js-sys = "0.3.59"
markdown-it = { path = "../" }
wasm-bindgen = "0.2.82"

[dependencies.web-sys]
version = "0.3.59"
features = [
  'CssStyleDeclaration',
  'Document',
  'DomStringMap',
  'DomTokenList',
  'Element',
  'HtmlElement',
  'HtmlBodyElement',
  'HtmlTextAreaElement',
  'InputEvent',
  'MouseEvent',
  'Node',
  'NodeList',
  'Window',
  'console'
]
